# the_todo

./: README.md  docker-compose.yml
backend/: .env  Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: pubspec.yaml
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
