[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "macros"] }
dotenvy = "0.15"
tower-http = { version = "0.6.7", features = ["cors"] }
mongodb = "3.4.1"